<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MachineControl" Id="{6e52120e-a7f6-4368-af04-8e9b4da5919e}">
    <Declaration><![CDATA[TYPE ST_MachineControl :
STRUCT
	bAuto					:BOOL;
	bService				:BOOL;
	bStart					:BOOL;
	bStop					:BOOL;
	bPause					:BOOL;
	bNext					:BOOL;
	bPrevious				:BOOL;
	bJump					:BOOL;
	bLogIn					:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>