<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.13">
  <POU Name="P2_01_Production_Seq" Id="{9e942740-d74a-4ff1-a87c-60c4ba8a2fad}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P2_01_Production_Seq
VAR
	bRunning					:BOOL;
	
	trigStart					:R_TRIG;
	trigStop					:R_TRIG;
	trigSkip					:R_TRIG;
	trigPrev					:R_TRIG;
	trigJump					:R_TRIG;

	bPhaseRunning				:BOOL;
	bPhaseFinish				:BOOL;
	bPreviousStep				:BOOL;

	iMaxNumberOfProcess			:INT;
END_VAR

VAR PERSISTENT
	iProcess					:INT;
	iProcessPrev				:INT;
	iStep						:INT;
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[iMaxNumberOfProcess:=20;

//Jump requests
trigStart(CLK:=GV.stControl.bRunning);
trigStop(CLK:=GV.stControl.bStopped);
trigSkip(CLK:=GV.stControl.bNext);
trigPrev(CLK:=GV.stControl.bPrevious);
trigJump(CLK:=GV.stControl.bJump);

// Terminate process
IF trigStop.Q THEN
	iStep := 1000;
END_IF

IF trigPrev.Q THEN
	bPreviousStep:=TRUE;
END_IF

//Protect iProcess of forcing online value
IF iProcess < 0 THEN
	iProcess := 0;
ELSIF iProcess > iMaxNumberOfProcess THEN
	iProcess := iMaxNumberOfProcess;
END_IF

IF Recipes.Production_Active.stPhase[iProcess].iType = 0 THEN
	bPhaseRunning:=_Feeding.q_bRunning;
	bPhaseFinish:=_Feeding.q_bFinished;
ELSIF Recipes.Production_Active.stPhase[iProcess].iType = 1 THEN
	bPhaseRunning:=_Mixing.q_bRunning;
	bPhaseFinish:=_Mixing.q_bFinished;
ELSIF Recipes.Production_Active.stPhase[iProcess].iType = 2 THEN
	bPhaseRunning:=_Granulation.q_bRunning;
	bPhaseFinish:=_Granulation.q_bFinished;
ELSIF Recipes.Production_Active.stPhase[iProcess].iType = 3 THEN
	bPhaseRunning:=_Discharge.q_bRunning;
	bPhaseFinish:=_Discharge.q_bFinished;
END_IF

//0 - Feeding
//1 - Mixing
//2 - Granulation
//3 - Discharge

bRunning:=iStep<>0;

CASE iStep OF 
	0:	
		iProcess := 0;
		iProcessPrev := 0;
		
		IF trigStart.Q AND GV.iRecipeType = 0 THEN
			iProcess:=1;
			iStep := 100;
		END_IF
		
	100:
		IF NOT GV.stControl.bPaused AND NOT  GV.stControl.bPhasePaused THEN
			iStep:=200;
		END_IF
		
	
	200: //Wait for process start
		bPreviousStep:=FALSE;
		IF bPhaseRunning THEN
			iStep:=300;
		END_IF
		
	300: //Process running	
		IF bPhaseFinish THEN
			iStep:=400;
		END_IF
		
	400: //Process finish and check next phases
		GV.stControl.bPhaseFinished:=TRUE;
		IF NOT bPhaseRunning THEN
			GV.stControl.bPhaseFinished:=FALSE;
			IF iProcess > 0 AND iProcess < iMaxNumberOfProcess AND NOT bPreviousStep THEN
				IF Recipes.Production_Active.stPhase[iProcess+1].bEnable THEN
					IF Recipes.Production_Active.stPhase[iProcess].bPause THEN
						GV.stControl.bPhasePaused:=TRUE;
					END_IF
					iProcessPrev:=iProcess;
					iProcess:=iProcess+1;
					iStep:=100;
				ELSE
					iStep:=1000;
				END_IF
			ELSIF bPreviousStep THEN
				iProcessPrev:=iProcess;
				IProcess:=iProcess-1;
				iStep:=100;
			END_IF
		END_IF
	1000:
		GV.stControl.bFinish:=TRUE;
		iStep:=0;
END_CASE
GV.iPP:=iProcess;









]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>